# GEC6816_smartgate

./: .gitignore  README.md  build-all.sh  config.sh
project-src/: CMakeLists.txt
project-src/src/: lockscreen.cpp  main.cpp  mainwindow.cpp  patternlock.cpp
scripts/: build-alpr.sh  build-qt.sh  check-env.sh  package-deploy.sh
